# ubsim

./: .gitmodules  CMakeLists.txt  CMakePresets.json  DataTypes.h  NeutrinoFlashMatchAna_module.cc  NeutrinoFlashMatch_module.cc  README.md  extractor_dict_wCRT.py
releaseDB/: CMakeLists.txt  base_dependency_database  uboone-cfg.in  uboone.html.in
test/: CMakeLists.txt
test/CRTMerge/: CMakeLists.txt  crt_merge.sh  crt_swizzle.sh
test/CRTSwizzle/: CMakeLists.txt  crt_swizzle.sh
test/DataProduction/: CMakeLists.txt  data_production.sh
test/EventGenerator/: prodsingle_uboone_max2.fcl
test/OverlayProduction/: CMakeLists.txt  overlay_production.sh
test/Production/: production.sh
test/RecoObjects/: CMakeLists.txt  PropTest.fcl  PropTest_module.cc
test/SpaceCharge/: CMakeLists.txt  SpaceChargeMicroBooNE_test.cc  spacechargetest_uboone.fcl
test/SparseRawDigits/: CMakeLists.txt  SparseRawDigitTest_module.cc  sparse_raw_digit_test.fcl
test/Swizzle/: CMakeLists.txt  swizzle.sh
test/ci/: ci_regression_test_uboonecode.sh  ci_test_gen_uboonecode.fcl  ci_test_reco1_uboonecode.fcl  ci_test_reco2_uboonecode.fcl  ci_tests.cfg
test/test_fcl/: CMakeLists.txt  test_fcl_ubsim.sh
ubcore/EventGenerator/HeavyNeutralLeptonGen/: CMakeLists.txt  FluxReader.cxx  FluxReader.h  FluxReaderBNB.cxx  FluxReaderNuMI.h  GenKinematics.cxx  GenKinematics.h  HeavyNeutralLeptonGenFromBNBFlux_module.cc  HeavyNeutralLeptonGenFromNuMIFlux_module.cc  README.md  heavy_neutral_lepton_gen_bnb.fcl
uboone/CRT/: CMakeLists.txt  CRTAnalyser_module.cc  CRTAuxFunctions.cc  CRTAuxFunctions.hh  CRTCalibration_module.cc  CRTChannelMapAlg.cc  CRTChannelMapAlg.hh  CRTCoincidence_module.cc  CRTConversionTestHits_module.cc  CRTDaqSim.hh  CRTDaqSim_module.cc  CRTData.hh  CRTDetSim.hh  CRTDetSim_module.cc  CRTGeoObjectSorter.cc  CRTGeoObjectSorter.hh  CRTGeometryHelper.hh  CRTGeometryHelper_service.cc  CRTHitProducer_module.cc  CRTMerger.hh  CRTMerger_module.cc  CRTRaw2CRTHitGPScorrsource1.fcl  CRTRaw2CRTHitGPScorrsource2_top.fcl  CRTRaw2CRTHitGPScorrsource3_top.fcl  CRTRaw2CRTHitsource.fcl  CRTRaw2CRTHitsource1.fcl  CRTRaw2CRTHitsource2_top.fcl  CRTRaw2CRTHitsource3_top.fcl  CRTRawtoCRTHitGPScorr_source.cc  CRTRawtoCRTHit_module.cc  CRTRawtoCRTHit_source.cc  CRTSimData.cc  CRTTrackProducer.fcl  CRTTrackProducer_module.cc  CRTTriggerFilter.hh  CRTgains.txt  CRTpedestals.txt  CRTpositionsSiPM-V5v2.txt  CRTpositionsSiPM-V7.txt  CRTpositionsSiPM-V8.txt  (+26 more)
uboone/CRT/CRTBernFEBDAQCore/: CMakeLists.txt  CMakeLists.txt~
uboone/CRT/CRTBinarySource/: CMakeLists.txt
uboone/CRT/CRTProducts/: CMakeLists.txt  CRTHit.cc  CRTHit.hh  CRTSimData.cc  CRTSimData.hh  CRTTrack.cc  CRTTrack.hh  MSetCRTFrag.cc  MSetCRTFrag.hh  classes.h  classes_def.xml
uboone/Calibrations/: CMakeLists.txt  CalibrationTPC_Algs.cxx  CalibrationdEdX_module.cc  Diffusion_module.cc  ExtractPedestalInformation_module.cc  Kplane2.fcl  Kplane2_module.cc  LifetimeQAQC_module.cc  Lifetime_module.cc  NoiseFilter_module.cc  XYZcorrection.fcl  XYZcorrection_module.cc  XYZvalidatioin.fcl  XYZvalidatioin_module.cc  calibration_microboone.fcl  calorimetry_microboone.fcl  diffusion.fcl  extract_pedestal_information.fcl  lifetime.fcl  lifetime_qaqc.fcl  run_larg4particlefilter_microboone.fcl
uboone/Calibrations/Optical/: CMakeLists.txt  FEMBasicTriggerAlgo.cxx  (+3 more)
uboone/DLFilters/: CMakeLists.txt  DLSignalSample_module.cc  dlmc_signalsample_filter.fcl
uboone/EventGenerator/: CMakeLists.txt  GeneratorPositionFilter_module.cc  MultiPartVertex_module.cc  generatorpositionfilter.fcl  lightsource_microboone_test.fcl  multipvtx.fcl  prodgenie_uboone.fcl  prodsingleNEST_uboone.fcl  prodsingle_uboone.fcl  prodsingle_uboone_comp.fcl
uboone/EventWeight/: CMakeLists.txt  EventWeight_module.cc  FluxHistWeightCalc.cxx  FluxUnisimWeightCalc.cxx  GenieWeightCalc.cxx  WeightCalc.cxx  WeightCalc.h  lite_run_both_reweights.fcl
uboone/Geometry/: CMakeLists.txt  ChannelMapUBooNEAlg.cxx  ChannelMapUBooNEAlg.h  UBOpChannelTypes.h  UBooNEGeometryHelper.h  UBooNEGeometryHelper_service.cc
uboone/LEEdeltaRadSinglePhoton/: CMakeLists.txt  FilterSignal.h  GeometryHelper.cxx  LEEPhotonAnalysis_module.cc  ParticleAssociations.cxx  RecoTrueTest_module.cc  VertexBuilder.cxx  VertexBuilder.h
uboone/MicroBooNEWireCell/: CMakeLists.txt  CellTreeUB_module.cc  celltreeub.fcl  run_celltreeub.fcl
uboone/RawData/: CMakeLists.txt
uboone/Utilities/: CMakeLists.txt  FileCatalogMetadataMicroBooNE.h  FileCatalogMetadataMicroBooNE_service.cc  OpHitRemapProducer_module.cc  PMTRemapProvider.cxx  PMTRemapProvider.h  PMTRemapService.h  PMTRemapService_service.cc  SignalShapingLite.cxx  SignalShapingLite.h  SignalShapingServiceMicroBooNE.h  SignalShapingServiceMicroBooNE_service.cc  TFileMetadataMicroBooNE.h  TFileMetadataMicroBooNE_service.cc  TinyHitFinderAna_module.cc  hitfinder_ana_uboone.fcl  ophitremapproducer.fcl  sam_microboone.fcl  services_microboone.fcl  services_microboone_basic.fcl  services_microboone_simulation.fcl  signalservices_microboone.fcl  time_memory_tracker_microboone.fcl
ubsim/DetSim/: CMakeLists.txt  RawDigitSimulator_module.cc  SimWireMicroBooNEAna_module.cc  SimWireMicroBooNE_module.cc
ubsim/EventGenerator/: CMakeLists.txt  GeneratorPositionFilter_module.cc  MultiPartVertex_module.cc  lightsource_microboone_test.fcl  prodgenie_uboone.fcl.legacyG4  prodsingle_uboone.fcl.legacyG4  prodsingle_uboone_comp.fcl
ubsim/Filters/: CMakeLists.txt  CorsikaCosmicGen_module.cc  EtaFilter_module.cc  HighEnergyNuMINuMuCCFilter_module.cc  IsolatedProtonFilter_module.cc  NeutrinoFilter_module.cc  NeutrinoTruthFilter_module.cc  NuMIKDARFilter_module.cc  NuMI_KDAR_Filter_module.cc  Nue0pFilter_module.cc  NueBackgroundFilter_module.cc  StopMuFilter_module.cc
ubsim/SNStreamSim/: CMakeLists.txt  ExecuteCompression_module.cc  SNFlipBitsPDFs.root  ThresholdMapBaselines19021.txt  compress.fcl  run_compression.fcl  run_compression_EXT.fcl  run_compression_MC.fcl  run_compression_MCOnly.fcl  run_compression_MConly.fcl  run_compression_OverlayOnly.fcl  run_compression_larlite.fcl
(+3518 files in other folders)
